[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/StatusBar/StatusBar.gd" type="Script" id=1]

[node name="状态栏" type="ColorRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 30.0
rect_min_size = Vector2( 1280, 30 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.225942, 0.726562, 0.12204, 1 )
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="布局" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Rect", "Size Flags" ]

[node name="左边距" type="Container" parent="布局" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 15.0
margin_bottom = 30.0
rect_min_size = Vector2( 15, 15 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="缩放标题" type="Label" parent="布局" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 19.0
margin_top = 8.0
margin_right = 60.0
margin_bottom = 22.0
rect_min_size = Vector2( 41, 14 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Zoom:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags", "custom_colors" ]

[node name="游标" type="HSlider" parent="布局" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 7.0
margin_right = 214.0
margin_bottom = 23.0
rect_min_size = Vector2( 150, 16 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Anchor", "Rect", "Size Flags", "custom_icons" ]

[node name="缩放率" type="Label" parent="布局" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 218.0
margin_top = 8.0
margin_right = 246.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "29%"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="间距1" type="Control" parent="布局" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 250.0
margin_right = 285.0
margin_bottom = 30.0
rect_min_size = Vector2( 35, 20 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Rect", "custom_constants" ]

[node name="操作按钮" type="HBoxContainer" parent="布局" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 289.0
margin_right = 485.0
margin_bottom = 30.0
rect_min_size = Vector2( 35, 30 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 12
alignment = 0
_sections_unfolded = [ "Material", "Rect", "Size Flags", "custom_constants" ]

[node name="缩小" type="Button" parent="布局/操作按钮" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 25.0
rect_min_size = Vector2( 40, 20 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "-"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags", "Theme", "custom_colors" ]

[node name="放大" type="Button" parent="布局/操作按钮" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_top = 5.0
margin_right = 92.0
margin_bottom = 25.0
rect_min_size = Vector2( 40, 20 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "+"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="原比例" type="Button" parent="布局/操作按钮" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 5.0
margin_right = 144.0
margin_bottom = 25.0
rect_min_size = Vector2( 40, 20 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "1:1"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="自适应比例" type="Button" parent="布局/操作按钮" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 156.0
margin_top = 5.0
margin_right = 196.0
margin_bottom = 25.0
rect_min_size = Vector2( 40, 20 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Fit"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="间距2" type="Control" parent="布局" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 489.0
margin_right = 549.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 20 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Rect", "custom_constants" ]

[node name="显示轮廓" type="CheckBox" parent="布局" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 553.0
margin_right = 687.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Display Outlines"
flat = false
align = 0
_sections_unfolded = [ "custom_constants" ]

[node name="显示轮廓2" type="CheckBox" parent="布局" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 691.0
margin_right = 825.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Display Outlines"
flat = false
align = 0
_sections_unfolded = [ "custom_constants" ]

[node name="间距3" type="Control" parent="布局" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 829.0
margin_right = 889.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 20 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Rect", "custom_constants" ]

[node name="提示" type="RichTextLabel" parent="布局" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 893.0
margin_right = 1280.0
margin_bottom = 30.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "error: 1 not fitting sprites"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[connection signal="pressed" from="布局/操作按钮/缩小" to="." method="_on_scale_down_pressed"]

[connection signal="pressed" from="布局/操作按钮/放大" to="." method="_on_scale_up_pressed"]

[connection signal="pressed" from="布局/操作按钮/原比例" to="." method="_on_scale_original_pressed"]

[connection signal="pressed" from="布局/操作按钮/自适应比例" to="." method="_on_scale_auto_pressed"]

[connection signal="pressed" from="布局/显示轮廓" to="." method="_on_display_outlines_pressed"]

[connection signal="pressed" from="布局/显示轮廓2" to="." method="_on_display_outlines_pressed"]


